--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>RacingMania</title>
-        <link rel="icon" type="image/png"  href="" />
-
-        <script src="p5/p5.js" type="text/javascript"></script>
-        <script src="p5/addons/p5.dom.js" type="text/javascript"></script>
-        <!--script src="p5/addons/p5.sound.js" type="text/javascript"></script-->
-        <script src="roadMarking.js" type="text/javascript"></script>
-        <script src="opponent.js" type="text/javascript"></script>
-        <script src="player.js" type="text/javascript"></script>
-        <script src="game.js" type="text/javascript"></script>
-    </head>
-    <body>
-    </body>
+	<head>
+		<meta charset="utf-8">
+		<title>RacingMania</title>
+		<link rel="icon" type="image/png" href=""/>
+		<script src="p5/p5.js" type="text/javascript"></script>
+		<script src="p5/addons/p5.dom.js" type="text/javascript"></script>
+        <script src="p5.collide2d.min.js"></script>
+		<!--script src="p5/addons/p5.sound.js" type="text/javascript"></script-->
+		<script src="roadMarking.js" type="text/javascript"></script>
+		<script src="opponent.js" type="text/javascript"></script>
+		<script src="player.js" type="text/javascript"></script>
+		<script src="NeuralNetwork/NeuronLayer.js"></script>
+		<script src="NeuralNetwork/Neuron.js"></script>
+		<script src="NeuralNetwork/NeuralNetwork.js"></script>
+		<script src="Brain.js"></script>
+		<script src="GA.js"></script>
+		<script src="game.js" type="text/javascript"></script>
+	</head>
+	<body></body>
 </html>
